--- a/artifact/index.html
+++ b/artifact/index.html
@@ -10,6 +10,18 @@
     .main-content-container {
       width:80%;
     }
+    a {
+      text-decoration:underline;
+    }
+    li {
+      margin:10px;
+    }
+    p {
+      margin:10px;
+    }
+    img {
+      margin:10px;
+    }
   </style>
 </html>
 <body>
