--- a/header.html
+++ b/header.html
@@ -1,10 +1,1 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <meta charset="utf-8" name="viewport">
-    <link rel="stylesheet" type="text/css" href="/css/style.css?v=1">
-    <link rel="stylesheet" type="text/css" href="/css/grid.css?v=1">
-    <script type="text/javascript" src="/lib/d3.v3.js"></script>
-    <title>Tyler Wolf</title>
-  </head>
-</html>
+<!DOCTYPE html><html><head><meta charset="utf-8" name="viewport"><link rel="stylesheet" type="text/css" href="/css/style.css?v=1"><link rel="stylesheet" type="text/css" href="/css/grid.css?v=1"><script type="text/javascript" src="/lib/d3.v3.js"></script><title>Tyler Wolf</title></head></html>
