--- a/app/portfolio/portfolio.html
+++ b/app/portfolio/portfolio.html
@@ -12,7 +12,7 @@
                 <p>With this interface, a user should easily be able to navigate and discover the significant contributors and detractors from their portfolio.</p>
             </div>
             <div class="col-xs-9">
-                <h3>Mock up</h3>
+                <h3>Wireframe</h3>
                 <img src="http://media.tylernwolf.com.s3.amazonaws.com/portfolio/heatmap_mockup1.png">
                 <p class="img-description">Full portfolio</p>
                 <img src="http://media.tylernwolf.com.s3.amazonaws.com/portfolio/heatmap_mockup3.png">
@@ -35,9 +35,9 @@
                 <p>Any variable can be set to human or simulation control, which should be clearly indicated. After the variables are set and submitted, a bar chart updates to show the results of the simulation.</p>
             </div>
             <div class="col-xs-9">
-                <h3>Mock up</h3>
+                <h3>Wireframe</h3>
                 <img src="http://media.tylernwolf.com.s3.amazonaws.com/portfolio/equalizer_mockup.png">
-                <p class="img-description">Equalizer mock up</p>
+                <p class="img-description">Equalizer wireframe</p>
             </div>
     <!--         <div class="col-xs-9">
                 <img src="http://media.tylernwolf.com.s3.amazonaws.com/portfolio/equalizer_design.png">
