--- a/app/portfolio/portfolio.html
+++ b/app/portfolio/portfolio.html
@@ -2,9 +2,13 @@
     <div ng-if="hide">Please refresh and retry password</div>
     <div ng-if="show">
         <h1 class="page-title">Portfolio</h1>
-        <div class="row">
+        <div class="row port-section">
+            <div class="col-xs-9" ng-click="toggleSection('heatmap')">
+                <h2>Financial Heatmap</h2><i class="glyphicon" ng-class="showClass('heatmap')"></i>
+            </div>
+        </div>
+        <div class="row heatmap" ng-if="showing('heatmap')">
             <div class="col-xs-9">
-                <h2>Financial Heatmap</h2>
                 <h3>Requirements</h3>
                 <p>A UI for visualizing a financial portfolio. Rectangles are sized to represent a stock's proportion of the portfolio. The color of the rectangles represented the stock's positive or negative contribution to the portfolio.</p>
                 <p>Portfolios could be grouped into larger sections, which should be represented similarly to stocks. When a section is clicked, the interface should zoom into the clicked section to give greater detail.</p>
@@ -26,11 +30,15 @@
                 <p class="img-description">Category Breakdown with mouseover</p>
             </div>
         </div>
-        <div class="row">
+        <div class="row port-section">
+            <div class="col-xs-9" ng-click="toggleSection('equalizer')">
+                <h2>Simulation Equalizer</h2><i class="glyphicon" ng-class="showClass('equalizer')"></i>
+            </div>
+        </div>
+        <div class="row equalizer" ng-if="showing('equalizer')">
             <div class="col-xs-9">
-                <h2>Simulation Equalizer</h2>
                 <h3>Requirements</h3>
-                <p>An interface for setting various input factors for a simulation. There are 10 variables that can be adjusted on a sliding scale. 
+                <p>An interface for setting various input factors for a simulation. There are 10 variables that can be adjusted on a sliding scale.</p>
                 <p>The variables have historical values associated with them. Various statistics about the historical values are indicated along with the current setting of the variable and whether or not it is above or below the historical mean.</p>
                 <p>Any variable can be set to human or simulation control, which should be clearly indicated. After the variables are set and submitted, a bar chart updates to show the results of the simulation.</p>
             </div>
@@ -47,6 +55,29 @@
                 <h3>Final version</h3>
                 <img src="http://media.tylernwolf.com.s3.amazonaws.com/portfolio/equalizer.png">
                 <p class="img-description">Production version</p>
+            </div>
+        </div>
+        <div class="row port-section">
+            <div class="col-xs-9" ng-click="toggleSection('swarm')">
+                <h2>Swarm 2048</h2><i class="glyphicon" ng-class="showClass('swarm')"></i>
+            </div>
+        </div>
+        <div class="row swarm" ng-if="showing('swarm')">
+            <div class="col-xs-9">
+                <h3>Requirements</h3>
+                <p>A retro-futuristic multiplayer version of the popular game 2048.</p>
+            </div>
+            <div class="col-xs-9">
+                <h3>Wireframe</h3>
+                <img src="http://media.tylernwolf.com.s3.amazonaws.com/portfolio/gameplay_mockup.png">
+                <p class="img-description">Gameplay wireframe</p>
+            </div>
+            <div class="col-xs-9">
+                <h3>Preliminary Design</h3>
+                <img src="http://media.tylernwolf.com.s3.amazonaws.com/portfolio/start.png">
+                <p class="img-description">Intro screen</p>
+                <img src="http://media.tylernwolf.com.s3.amazonaws.com/portfolio/in-game.png">
+                <p class="img-description">Gameplay</p>
             </div>
         </div>
     </div>
