--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                 <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-8">
                   <ul class="nav navbar-nav">
                     <li><a class="nav-link" href="#/portfolio">Portfolio</a></li>
-                    <!-- <li><a href="#/creative">Creative</a></li> -->
+                    <li><a href="#/creative">Creative</a></li>
                     <li><a href="#/about">About</a></li>
                     <li><a href="#/contact">Contact</a></li>
                   </ul>
