added to about and intro

--- a/app/about/about.html
+++ b/app/about/about.html
@@ -3,6 +3,15 @@
     <br/>
     <div>
         <p>I'm a <strong>Web Developer</strong> and <strong>UX Designer</strong> based in New York City. I draw, wireframe, research, design and code. I also spend some time on 3D design and WebGL programming.</p>
+        <h3>Design</h3>
+        <ul>
+            <li>Adobe Creative Suite</li>
+            <li>Sketch</li>
+            <li>Wireframing</li>
+            <li>Interactive Prototyping</li>
+            <li>User Research</li>
+            <li>UX Strategy</li>
+        </ul>
         <h3>Code</h3>
         <ul>
             <li>HTML/CSS</li>
@@ -13,11 +22,6 @@
             <li>jquery</li>
             <li>bootstrap</li>
             <li>three.js</li>
-        </ul>
-        <h3>Design</h3>
-        <ul>
-            <li>Adobe Creative Suite</li>
-            <li>Sketch</li>
         </ul>
     </div>
 </div>
