--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
       -->
       <script src="js/vendor/angular.min.js"></script>
       <script src="js/vendor/angular-route.min.js"></script>
-      <script src="js/vendor/colorpicker.js"></script>
+      <script src="js/vendor/colorPicker.js"></script>
       <script src="app.js"></script>
       <script src="app/entries.js"></script>
       <script src="app/intro/intro.js"></script>
