--- a/app/portfolio/portfolio.html
+++ b/app/portfolio/portfolio.html
@@ -30,7 +30,7 @@
             <div class="col-xs-9">
                 <h3>Description</h3>
                 <p>A wrapper library for d3 that simplifies building charts without removing the flexibility of the d3 library. I have maintained this library for more than two years.</p>
-                <p>This library has been starred more than 3,000 times on Github and forked more than 1,000 times. You can see the latest version <a href="https://github.com/novus/nvd3">here</a></p>
+                <p>This library has been starred more than 3,000 times on Github and forked more than 1,000 times. Available <a href="http://nvd3.org/">here</a></p>
             </div>
         </div>
         <div class="row port-section">
