updated about and SEO

--- a/app/about/about.html
+++ b/app/about/about.html
@@ -5,6 +5,8 @@
         <p>I'm a <strong>Web Developer</strong> and <strong>UX Designer</strong> based in New York City. I draw, wireframe, research, design and code. I also spend some time on 3D design and WebGL programming.</p>
         <h3>Design</h3>
         <ul>
+            <li>Web Application Design</li>
+            <li>Data Visualization</li>
             <li>Adobe Creative Suite</li>
             <li>Sketch</li>
             <li>Wireframing</li>
