--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
 <head>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <title>Tyler Wolf</title>
-  <meta name="description" content="">
+  <title>UX Designer in NYC | Tyler Wolf</title>
+  <meta name="description" content="User Experience Designer and Web Developer in NYC. I do Web Application design and development, Data Visualization and UX Research. See my Portfolio.">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,700' rel='stylesheet' type='text/css'>
   <link rel="stylesheet" href="css/vendor/normalize.css">
