removed contact section, moved to about section

--- a/app/about/about.html
+++ b/app/about/about.html
@@ -1,29 +1,50 @@
 <div class="main-container">
     <h1 class="page-title">About</h1>
     <br/>
-    <div>
-        <p>I'm a <strong>Web Developer</strong> and <strong>UX Designer</strong> based in New York City. I draw, wireframe, research, design and code. I also spend some time on 3D design and WebGL programming.</p>
-        <h3>Design</h3>
-        <ul>
-            <li>Web Application Design</li>
-            <li>Data Visualization</li>
-            <li>Adobe Creative Suite</li>
-            <li>Sketch</li>
-            <li>Wireframing</li>
-            <li>Interactive Prototyping</li>
-            <li>User Research</li>
-            <li>UX Strategy</li>
-        </ul>
-        <h3>Code</h3>
-        <ul>
-            <li>HTML/CSS</li>
-            <li>d3.js</li>
-            <li>angular.js</li>
-            <li>node.js</li>
-            <li>backbone.js</li>
-            <li>jquery</li>
-            <li>bootstrap</li>
-            <li>three.js</li>
-        </ul>
+    <div class="content-section row">
+        <div class="col-lg-8 col-xs-12">
+            <p>I'm a <strong>Web Developer</strong> and <strong>UX Designer</strong> based in New York City. I draw, wireframe, research, design and code. I also spend some time on 3D design and WebGL programming.</p>
+            <h3>Design</h3>
+            <ul>
+                <li>Web Application Design</li>
+                <li>Data Visualization</li>
+                <li>Adobe Creative Suite</li>
+                <li>Sketch</li>
+                <li>Wireframing</li>
+                <li>Interactive Prototyping</li>
+                <li>User Research</li>
+                <li>UX Strategy</li>
+            </ul>
+            <h3>Code</h3>
+            <ul>
+                <li>HTML/CSS</li>
+                <li>d3.js</li>
+                <li>angular.js</li>
+                <li>node.js</li>
+                <li>backbone.js</li>
+                <li>jquery</li>
+                <li>bootstrap</li>
+                <li>three.js</li>
+            </ul>
+        </div>
+
+        <div class="col-lg-4 col-xs-12">
+        <div class="contact-list-header">Contact</div>
+            <br>
+            <div class="email row col-xs-12"><a href="mailto:tyler@tylernwolf.com"><i class="fa fa-envelope-o"></i>&nbsp;tyler@tylernwolf.com</a></div>
+            <div class="row col-xs-12">
+                <ul class="social-links">
+                    <li><a href="https://twitter.com/tylernwolf" style="color:#4099ff" target="_blank"><i class="fa fa-3x fa-twitter-square"></i><span>@tylernwolf</span></a></li>
+
+                    <li><a href="http://github.com/thetylerwolf" style="color:#000000" target="_blank"><i class="fa fa-3x fa-github-square"></i><span>thetylerwolf</span></a></li>
+
+                    <li><a href="http://www.linkedin.com/pub/tyler-wolf/5/602/76/" style="color:#007bb6" target="_blank"><i class="fa fa-3x fa-linkedin-square"></i><span>Tyler Wolf</span></a></li>
+
+                    <li><a href="http://blog.tylernwolf.com" target="_blank"><i class="fa fa-3x fa-tumblr-square" style="color:#35465c"></i><span>tylernwolf</span></a></li>
+
+                    <!-- <li><a href="mailto:tyler@tylernwolf.com"><i class="fa fa-3x fa-envelope-square"></i><span>tyler@tylernwolf.com</span></a></li> -->
+                </ul>
+            </div>
+        </div>
     </div>
 </div>
