--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
   <link rel="stylesheet" href="css/vendor/main.css">
   <link rel="stylesheet" href="css/vendor/bootstrap.min.css">
   <link rel="stylesheet" href="css/vendor/bootstrap-theme.min.css">
+  <link rel="stylesheet" href="css/vendor/font-awesome.min.css">
   <link rel="stylesheet" href="css/colorpicker.css">
   <link rel="stylesheet" href="css/app.css">
   <link rel="stylesheet" href="css/intro.css">
@@ -44,7 +45,6 @@
                     <li><a class="nav-link" href="#/portfolio">Portfolio</a></li>
                     <li><a href="#/creative">Creative</a></li>
                     <li><a href="#/about">About</a></li>
-                    <li><a href="#/contact">Contact</a></li>
                   </ul>
                 </div><!-- /.navbar-collapse -->
             </div>
@@ -72,7 +72,6 @@
       <script src="app/intro/intro.js"></script>
       <script src="app/portfolio/portfolio.js"></script>
       <script src="app/about/about.js"></script>
-      <script src="app/contact/contact.js"></script>
       <script src="app/creative/creative.js"></script>
       <script src="app/creative/creative_entry.js"></script>
 
