added resume, started resume viz

--- a/app/about/about.html
+++ b/app/about/about.html
@@ -29,7 +29,7 @@
         </div>
 
         <div class="col-lg-4 col-xs-12">
-        <div class="contact-list-header">Contact</div>
+            <div class="contact-list-header">Contact</div>
             <br>
             <div class="email row col-xs-12"><a href="mailto:tyler@tylernwolf.com"><i class="fa fa-envelope-o"></i>&nbsp;tyler@tylernwolf.com</a></div>
             <div class="row col-xs-12">
@@ -46,5 +46,8 @@
                 </ul>
             </div>
         </div>
+<!--         <div class="col-xs-12">
+            <tw-resume/>
+        </div> -->
     </div>
 </div>
