--- a/index.html
+++ b/index.html
@@ -69,6 +69,7 @@
       <script src="js/vendor/colorPicker.js"></script>
       <script src="app.js"></script>
       <script src="app/entries.js"></script>
+      <!-- <script src="app/resume.js"></script> -->
       <script src="app/intro/intro.js"></script>
       <script src="app/portfolio/portfolio.js"></script>
       <script src="app/about/about.js"></script>
