removed password from portfolio and updated website for sketch plugin

--- a/app/portfolio/portfolio.html
+++ b/app/portfolio/portfolio.html
@@ -96,7 +96,7 @@
         <div class="row datagen" ng-if="showing('datagen')">
             <div class="col-xs-9">
                 <h3>Description</h3>
-                <p>A Sketch plugin I developed that generates columns of dummy data for data tables and dummy line and bar charts. The plugin was developed with financial applications in mind, but it works great for other applications.</p><p>The plugin is steadily growing a user base. You can see the latest version <a href="https://github.com/thetylerwolf/sketchfindatagen">here</a></p>
+                <p>A Sketch plugin I developed that generates columns of dummy data for data tables and dummy line and bar charts. The plugin was developed with financial applications in mind, but it works great for any purpose.</p><p>The plugin is steadily growing a user base. You can see the latest version <a href="http://thetylerwolf.github.io/sketchfindatagen/">here</a></p>
             </div>
         </div>
         <div class="row port-section">
