quick change to sell page

--- a/datastudio/index.html
+++ b/datastudio/index.html
@@ -6,8 +6,8 @@
     <head>
       <meta charset="utf-8">
       <meta http-equiv="X-UA-Compatible" content="IE=edge">
-      <title>UX Designer in NYC | Tyler Wolf</title>
-      <meta name="description" content="User Experience Designer and Web Developer in NYC. I do Web Application design and development, Data Visualization and UX Research. See my Portfolio.">
+      <title>Wolflux - Sketch Data Studio Premium</title>
+      <meta name="description" content="">
       <meta name="viewport" content="width=device-width, initial-scale=1">
       <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,700' rel='stylesheet' type='text/css'>
       <link rel="stylesheet" href="../css/vendor/normalize.css">
@@ -31,7 +31,7 @@
 
                 <p>Sketch Data Studio is a Sketch plugin that enables data importing from CSV files into Sketch compositions. Imported CSV data can be used to generate charts and data tables - a huge time saver that pays for itself.</p>
 
-                <p>Chart types currently supported are Bar charts and Line charts in addition to Data Tables. By purchasing a license to Sketch Data Studio, you receive the Premium version of the plugin and will receive future updates to the software free of charge. In addition, you will receive direct customer support.</p>
+                <p>Chart types currently supported are Bar charts and Line charts in addition to Data Tables. By purchasing a license to Sketch Data Studio, you receive the Premium version of the plugin and will receive future updates to the software free of charge. In addition, you will receive direct customer support should you encounter any issues with your purchase.</p>
 
                 <br>
                 <br>
