quick change to sell page again

--- a/datastudio/index.html
+++ b/datastudio/index.html
@@ -23,7 +23,7 @@
     <body>
 
             <div class="container">
-                <h1>Sketch Data Studio</h1>
+                <h1>Sketch Data Studio Premium</h1>
                 <br>
 
                 <h4>Thank you for your interest in Sketch Data Studio!</h4>
