--- a/datastudio/index.html
+++ b/datastudio/index.html
@@ -35,7 +35,7 @@
 
                 <br>
                 <br>
-                <h3>Price $10.00</h3>
+                <h3>Price $10.00</h3><p>(you will receive an e-mail containing the file)</p>
                 <form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top">
                 <input type="hidden" name="cmd" value="_s-xclick">
                 <input type="hidden" name="hosted_button_id" value="6UVZUV9FWAGZ4">
