integrated data studio sell page into angular app

--- a/app/portfolio/portfolio.html
+++ b/app/portfolio/portfolio.html
@@ -90,13 +90,13 @@
         </div>
         <div class="row port-section">
             <div class="col-xs-9" ng-click="toggleSection('datagen')">
-                <h2>Sketch Financial Data Generator (code/tool)</h2><i class="glyphicon" ng-class="showClass('datagen')"></i>
+                <h2>Sketch Data Studio (code/tool)</h2><i class="glyphicon" ng-class="showClass('datagen')"></i>
             </div>
         </div>
         <div class="row datagen" ng-if="showing('datagen')">
             <div class="col-xs-9">
                 <h3>Description</h3>
-                <p>A Sketch plugin I developed that generates columns of dummy data for data tables and dummy line and bar charts. The plugin was developed with financial applications in mind, but it works great for any purpose.</p><p>The plugin is steadily growing a user base. You can see the latest version <a href="http://thetylerwolf.github.io/sketchfindatagen/">here</a></p>
+                <p>A Sketch plugin I developed that converts CSV files to data tables or charts in Sketch. The plugin also generates columns of dummy data for data tables and dummy line and bar charts. The plugin is optimal for any data-heavy design applications and can be used as a quick way to prototype and design data visualizations.</p><p>The plugin is steadily growing a user base. You can see the latest version <a href="http://thetylerwolf.github.io/sketch-data-studio/">here</a></p>
             </div>
         </div>
         <div class="row port-section">
