--- a/index.html
+++ b/index.html
@@ -75,6 +75,7 @@
       <script src="app/about/about.js"></script>
       <script src="app/creative/creative.js"></script>
       <script src="app/creative/creative_entry.js"></script>
+      <script src="app/datastudio/datastudio.js"></script>
 
       <script type="text/javascript">
         var _gaq = _gaq || [];
