--- a/app/intro/intro.html
+++ b/app/intro/intro.html
@@ -1,5 +1,4 @@
 <div class="intro-container">
     <h4 class="content-text">Hi, I'm Tyler. I'm a</h4>
-    <h1 class="intro-headline">UX Designer & Web Developer</h1>
-    <h4 class="content-text">I'm in the process of redesigning my website. Bear with me if things seem a little plain around here!</h4>
+    <h1 class="intro-headline section-header">UX Designer<br/>& Software Developer</h1>
 </div>
