--- a/index.html
+++ b/index.html
@@ -9,7 +9,10 @@
   <title>UX Designer in NYC | Tyler Wolf</title>
   <meta name="description" content="User Experience Designer and Web Developer in NYC. I do Web Application design and development, Data Visualization and UX Research. See my Portfolio.">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  
   <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,700' rel='stylesheet' type='text/css'>
+  <link href='http://fonts.googleapis.com/css?family=Roboto' rel='stylesheet' type='text/css'>
+
   <link rel="stylesheet" href="css/vendor/normalize.css">
   <link rel="stylesheet" href="css/vendor/main.css">
   <link rel="stylesheet" href="css/vendor/bootstrap.min.css">
@@ -36,7 +39,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                   </button>
-                  <a class="navbar-brand" href="#">Tyler Wolf</a>
+                  <a class="navbar-brand" href="#/">Tyler Wolf</a>
                 </div>
 
                 <!-- Collect the nav links, forms, and other content for toggling -->
