--- a/app/datastudio/datastudio.html
+++ b/app/datastudio/datastudio.html
@@ -1,33 +1,38 @@
 <link rel="stylesheet" href="css/datastudio.css">
 
-<h1 class="roboto-font">Sketch Data Studio Premium</h1>
+<h1 class="roboto-font">Sketch Data Studio</h1>
 <h3 class="roboto-font faded">Design with real data.</h3>
 <br>
 
 <div class="row">
-  <div class="column col-xs-4">
+  <div class="column col-xs-12 col-sm-4">
     <p>Sketch Data Studio is a Sketch plugin that makes converting data into data tables and charts easy. Edit data in your favorite spreadsheet program and pull data directly from CSV. Save yourself some time!</p>
   </div>
+  <div class="column col-xs-12 col-sm-8">
+    <img class="center-block" src="" alt="Demo image">
+  </div>
 </div>
 <div class="row">
-  <a class="get-button" href="https://github.com/thetylerwolf/sketch-data-studio/zipball/master">Download Free</a>
-  <form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top">
-    <input type="hidden" name="cmd" value="_s-xclick">
-    <input type="hidden" name="hosted_button_id" value="6UVZUV9FWAGZ4">
-    <table>
-    </table>
-    <input class="get-button" type="submit" border="0" name="submit" alt="PayPal link" value="Buy Premium ($10)">
-    <img alt="" border="0" src="https://www.paypalobjects.com/en_US/i/scr/pixel.gif" width="1" height="1">
-  </form>
-</div>
-
-<div class="row">
-  <div class="column col-xs-12">
-    <p>Chart types currently supported are Bar charts and Line charts in addition to Data Tables. By purchasing a license to Sketch Data Studio, you receive the Premium version of the plugin and will receive future updates to the software free of charge. In addition, you will receive direct customer support should you encounter any issues with your purchase.</p>
+  <div class="column col-xs-12 col-sm-4">
+    <br/>
+    <a class="btn btn-free btn-block btn-lg" href="https://github.com/thetylerwolf/sketch-data-studio/zipball/master">Download Free Version</a>
+    <br/>
+    <form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top">
+      <input type="hidden" name="cmd" value="_s-xclick">
+      <input type="hidden" name="hosted_button_id" value="6UVZUV9FWAGZ4">
+      <table>
+      </table>
+      <input class="btn btn-warning btn-premium btn-lg btn-block" type="submit" border="0" name="submit" alt="PayPal link" value="Get Premium ($10)">
+      <img alt="" border="0" src="https://www.paypalobjects.com/en_US/i/scr/pixel.gif" width="1" height="1">
+    </form>
   </div>
 </div>
 
-
-<br>
-<br>
-<h3>Price $10.00</h3><p>(you will receive an e-mail containing the file and installation instructions)</p>
+<div class="row detail-row">
+  <div class="column col-xs-12">
+    <h1 class="roboto-font">Why Go Premium?</h1>
+    <p>Premium enables converting .csv files to Bar charts and Line charts in addition to Data Tables. By purchasing Sketch Data Studio, you receive the Premium version of the plugin and will receive future updates to the software free of charge. In addition, you have direct customer support should you encounter any issues with your purchase.</p>
+    <br>
+    <p>Questions? Just ask</p><a class="btn btn-free" href="mailto:sketchdatastudio@gmail.com">sketchdatastudio@gmail.com</a>
+  </div>
+</div>
