update to site look

--- a/app/about/about.html
+++ b/app/about/about.html
@@ -2,8 +2,8 @@
     <h1 class="page-title">About</h1>
     <br/>
     <div class="content-section row">
-        <div class="col-lg-8 col-xs-12">
-            <p>I'm a <strong>Web Developer</strong> and <strong>UX Designer</strong> based in New York City. I draw, wireframe, research, design and code. I also spend some time on 3D design and WebGL programming.</p>
+        <div class="col-sm-6 col-xs-12">
+            <p>I'm a <strong>Software Developer</strong> and <strong>UX Designer</strong> based in New York City. I draw, wireframe, research, design and code. I also spend some time on 3D design and WebGL programming.</p>
             <h3>Design</h3>
             <ul>
                 <li>Web Application Design</li>
@@ -28,7 +28,7 @@
             </ul>
         </div>
 
-        <div class="col-lg-4 col-xs-12">
+        <div class="col-sm-6 col-xs-12">
             <div class="contact-list-header">Contact</div>
             <br>
             <div class="email row col-xs-12"><a href="mailto:tyler@tylernwolf.com"><i class="fa fa-envelope-o"></i>&nbsp;tyler@tylernwolf.com</a></div>
