updated portfolio look and feel

--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
   <link rel="stylesheet" href="css/intro.css">
   <link rel="stylesheet" href="css/creative.css">
   <link rel="stylesheet" href="css/creative_entry.css">
+  <link rel="stylesheet" href="css/portfolio.css">
   <script src="js/vendor/modernizr-2.6.2.min.js"></script>
   <script src="js/vendor/jquery-1.10.2.min.js"></script>
   <script src="js/vendor/bootstrap.min.js"></script>
