--- a/app/portfolio/portfolio.html
+++ b/app/portfolio/portfolio.html
@@ -2,125 +2,21 @@
     <div ng-if="hide">Please refresh and retry password</div>
     <div ng-if="show">
         <h1 class="page-title">Portfolio</h1>
-        <div class="row port-section">
-            <div class="col-xs-9" ng-click="toggleSection('novus')">
-                <h2>Novus</h2><i class="glyphicon" ng-class="showClass('novus')"></i>
+        <div class="portfolio-filters clearfix">
+            <div class="filter-title">Filters</div>
+            <div class="port-filter" ng-repeat="filter in filters" ng-click="filterClick(filter)" ng-mouseleave="filterLeave(filter)" ng-class="{selected:filter.selected}">
+                {{filter.name}}
+                <div class="filter-underline"></div>
             </div>
         </div>
-        <div class="row novus" ng-if="showing('novus')">
-            <div class="col-xs-9">
-                <h3>Description</h3>
-                <p>Novus is a financial analytics platform for Institutional investors (hedge funds, fund-of-funds, etc.) The platform provides analytics and risk metrics across a user's entire investment portfolio down to the position level.</p>
-                <p>I worked on Novus first as a front end/UI developer, then as a UX/UI designer. Working with such complex data sets as investment portfolios (trees of many different types of data) presents many difficult design challenges. Keeping the user aware of the current context and how they can control it is critical. It's also important for users to be able to consume the data easily. This led to many opportunities for data visualization.</p>
-            </div>
-            <div class="col-xs-9">
-                <h3>Screenshots</h3>
-                <img src="http://media.tylernwolf.com.s3.amazonaws.com/portfolio/novus_1.png">
-                <p class="img-description">Novus</p>
-                <img src="http://media.tylernwolf.com.s3.amazonaws.com/portfolio/novus_2.png">
-                <p class="img-description">Data visualization</p>
-            </div>
-        </div>
-        <div class="row port-section">
-            <div class="col-xs-9" ng-click="toggleSection('nvd3')">
-                <h2>nvd3 (code)</h2><i class="glyphicon" ng-class="showClass('nvd3')"></i>
-            </div>
-        </div>
-        <div class="row nvd3" ng-if="showing('nvd3')">
-            <div class="col-xs-9">
-                <h3>Description</h3>
-                <p>A wrapper library for d3 that simplifies building charts without removing the flexibility of the d3 library. I have maintained this library for more than two years.</p>
-                <p>This library has been starred more than 3,000 times on Github and forked more than 1,000 times. Available <a href="http://nvd3.org/">here</a></p>
-            </div>
-        </div>
-        <div class="row port-section">
-            <div class="col-xs-9" ng-click="toggleSection('heatmap')">
-                <h2>Financial Heatmap</h2><i class="glyphicon" ng-class="showClass('heatmap')"></i>
-            </div>
-        </div>
-        <div class="row heatmap" ng-if="showing('heatmap')">
-            <div class="col-xs-9">
-                <h3>Requirements</h3>
-                <p>A UI for visualizing a financial portfolio. Rectangles are sized to represent a stock's proportion of the portfolio. The color of the rectangles represented the stock's positive or negative contribution to the portfolio.</p>
-                <p>Portfolios could be grouped into larger sections, which should be represented similarly to stocks. When a section is clicked, the interface should zoom into the clicked section to give greater detail.</p>
-                <p>Hovering over a particular stock should give a pop-up with more detailed information about the stock.</p>
-                <p>With this interface, a user should easily be able to navigate and discover the significant contributors and detractors from their portfolio.</p>
-            </div>
-            <div class="col-xs-9">
-                <h3>Wireframe</h3>
-                <img src="http://media.tylernwolf.com.s3.amazonaws.com/portfolio/heatmap_mockup1.png">
-                <p class="img-description">Full portfolio</p>
-                <img src="http://media.tylernwolf.com.s3.amazonaws.com/portfolio/heatmap_mockup3.png">
-                <p class="img-description">Category Breakdown with mouseover</p>
-            </div>
-            <div class="col-xs-9">
-                <h3>Final version</h3>
-                <img src="http://media.tylernwolf.com.s3.amazonaws.com/portfolio/heatmap1.png">
-                <p class="img-description">Full portfolio</p>
-                <img src="http://media.tylernwolf.com.s3.amazonaws.com/portfolio/heatmap3.png">
-                <p class="img-description">Category Breakdown with mouseover</p>
-            </div>
-        </div>
-        <div class="row port-section">
-            <div class="col-xs-9" ng-click="toggleSection('equalizer')">
-                <h2>Simulation Equalizer</h2><i class="glyphicon" ng-class="showClass('equalizer')"></i>
-            </div>
-        </div>
-        <div class="row equalizer" ng-if="showing('equalizer')">
-            <div class="col-xs-9">
-                <h3>Requirements</h3>
-                <p>An interface for setting various input factors for a simulation. There are 10 variables that can be adjusted on a sliding scale.</p>
-                <p>The variables have historical values associated with them. Various statistics about the historical values are indicated along with the current setting of the variable and whether or not it is above or below the historical mean.</p>
-                <p>Any variable can be set to human or simulation control, which should be clearly indicated. After the variables are set and submitted, a bar chart updates to show the results of the simulation.</p>
-            </div>
-            <div class="col-xs-9">
-                <h3>Wireframe</h3>
-                <img src="http://media.tylernwolf.com.s3.amazonaws.com/portfolio/equalizer_mockup.png">
-                <p class="img-description">Equalizer wireframe</p>
-            </div>
-    <!--         <div class="col-xs-9">
-                <img src="http://media.tylernwolf.com.s3.amazonaws.com/portfolio/equalizer_design.png">
-                <p class="img-description">Equalizer preliminary design</p>
-            </div> -->
-            <div class="col-xs-9">
-                <h3>Final version</h3>
-                <img src="http://media.tylernwolf.com.s3.amazonaws.com/portfolio/equalizer.png">
-                <p class="img-description">Production version</p>
-            </div>
-        </div>
-        <div class="row port-section">
-            <div class="col-xs-9" ng-click="toggleSection('datagen')">
-                <h2>Sketch Data Studio (code/tool)</h2><i class="glyphicon" ng-class="showClass('datagen')"></i>
-            </div>
-        </div>
-        <div class="row datagen" ng-if="showing('datagen')">
-            <div class="col-xs-9">
-                <h3>Description</h3>
-                <p>A Sketch plugin I developed that converts CSV files to data tables or charts in Sketch. The plugin also generates columns of dummy data for data tables and dummy line and bar charts. The plugin is optimal for any data-heavy design applications and can be used as a quick way to prototype and design data visualizations.</p><p>The plugin is steadily growing a user base. You can see the latest version <a href="http://thetylerwolf.github.io/sketch-data-studio/">here</a></p>
-            </div>
-        </div>
-        <div class="row port-section">
-            <div class="col-xs-9" ng-click="toggleSection('swarm')">
-                <h2>Swarm 2048</h2><i class="glyphicon" ng-class="showClass('swarm')"></i>
-            </div>
-        </div>
-        <div class="row swarm" ng-if="showing('swarm')">
-            <div class="col-xs-9">
-                <h3>Requirements</h3>
-                <p>A retro-futuristic multiplayer version of the popular game 2048.</p>
-                <p>A playable version will be available soon!</p>
-            </div>
-            <div class="col-xs-9">
-                <h3>Wireframe</h3>
-                <img src="http://media.tylernwolf.com.s3.amazonaws.com/portfolio/gameplay_mockup.png">
-                <p class="img-description">Gameplay wireframe</p>
-            </div>
-            <div class="col-xs-9">
-                <h3>Preliminary Design</h3>
-                <img src="http://media.tylernwolf.com.s3.amazonaws.com/portfolio/start.png">
-                <p class="img-description">Intro screen</p>
-                <img src="http://media.tylernwolf.com.s3.amazonaws.com/portfolio/in-game.png">
-                <p class="img-description">Gameplay</p>
+        <div class="portfolio-works">
+            <div class="row">
+                <div class="col-md-3 col-xs-6" ng-repeat="work in works | filter:portFilters">
+                    <a href="#/portfolio/{{work.id}}" class="portfolio-item">
+                        <div class="work-picture"><img src="http://media.tylernwolf.com.s3.amazonaws.com/portfolio/thumbnails/{{work.thumbnail}}"></div>
+                        <div class="work-title">{{work.title}}</div>
+                    </a>
+                </div>
             </div>
         </div>
     </div>
