added website and the garden to portfolio

--- a/app/about/about.html
+++ b/app/about/about.html
@@ -8,6 +8,7 @@
             <ul>
                 <li>Web Application Design</li>
                 <li>Data Visualization</li>
+                <li>Virtual Reality Design</li>
                 <li>Adobe Creative Suite</li>
                 <li>Sketch</li>
                 <li>Wireframing</li>
@@ -22,9 +23,11 @@
                 <li>angular.js</li>
                 <li>node.js</li>
                 <li>backbone.js</li>
-                <li>jquery</li>
-                <li>bootstrap</li>
+                <li>jQuery</li>
+                <li>Bootstrap</li>
                 <li>three.js</li>
+                <li>C#</li>
+                <li>Unity 3D</li>
             </ul>
         </div>
 
