--- a/app/portfolio/works/2048.html
+++ b/app/portfolio/works/2048.html
@@ -5,9 +5,23 @@
 </div>
 <div class="row swarm">
     <div class="col-xs-9">
+        <h3>Implementation</h3>
+        
+        <dl class="implementation dl-horizontal">
+            <dt>Front end</dt>
+            <dd>Javascript (Angular), Bootstrap + CSS</dd>
+            <dt>Back end</dt>
+            <dd>Javascript (Node)</dd>
+            <dt>Design</dt>
+            <dd>Sketch, Cinema4D</dd>
+        </dl>
+
         <h3>Requirements</h3>
+
         <p>A retro-futuristic multiplayer version of the popular game 2048.</p>
+
         <p>A playable version will be available soon.</p>
+
     </div>
     <div class="col-xs-9 section-image">
         <h3>Wireframe</h3>
