--- a/app/portfolio/works/datastudio.html
+++ b/app/portfolio/works/datastudio.html
@@ -1,15 +1,45 @@
 <div class="row port-section">
     <div class="col-xs-9">
-        <h2>Sketch Data Studio (code/tool)</h2>
+        <h2>Sketch Data Studio</h2>
     </div>
 </div>
 <div class="row datagen">
     <div class="col-xs-9">
-        <h3>Description</h3>
-        <p>A Sketch plugin I developed that converts CSV files to data tables or charts in Sketch. The plugin also generates columns of dummy data for data tables and dummy line and bar charts. The plugin is optimal for any data-heavy design applications and can be used as a quick way to prototype and design data visualizations.</p>
 
-        <p>The plugin is steadily growing a user base and was featured in an Invision blog post (<a href="http://blog.invisionapp.com/10-tips-on-prototyping-uis-with-sketch/">see it here</a>).</p>
+        <h3>Implementation</h3>
+
+        <dl class="implementation dl-horizontal">
+            <dt>Language</dt>
+            <dd>CocoaScript</dd>
+        </dl>
+
+        <h4>Website</h4>
+
+        <dl class="implementation dl-horizontal">
+            <dt>Front end</dt>
+            <dd>Bootstrap</dd>
+            <dt>Design assets</dt>
+            <dd>Sketch</dd>
+        </dl>
+
+        <h3>Description</h3>
+
+        <p>A Sketch plugin I developed that converts CSV files to data tables and charts in Sketch. The plugin also generates columns of dummy data for data tables and dummy line and bar charts. The plugin is optimal for any data-heavy design applications and can be used as a quick way to prototype and design data visualizations.</p>
+
+        <p>Implementing this presented a few UX challenges with consideration for how to work with the Sketch plugin implementation and OS X dialogues to make the plugin as easy to understand and use as possible.</p>
+
+        <p>The plugin is steadily growing a user base and was featured in an <a href="http://blog.invisionapp.com/10-tips-on-prototyping-uis-with-sketch/"><strong>Invision blog post</strong></a>. It has been downloaded over 1,000 times and is visited hundreds of times a month.</p>
         
-        <p>You can see the latest version of the plugin <a href="http://thetylerwolf.github.io/sketch-data-studio/" target="_blank">here</a></p>
+        <p>I made a premium version of the plugin with added functionality based the needs of designers on data-heavy projects and data scientists. Many people have found the functionality in the premium version useful. It can be found <a href="http://thetylerwolf.github.io/sketch-data-studio/" target="_blank">here</a>.</p>
+
+        <p>The source code for the free version of the plugin is available on Github. You can find it <a href="https://github.com/thetylerwolf/sketch-data-studio">here</a>.</p>
+
     </div>
+
+    <div class="col-xs-9 section-image">
+        <h3>Screenshots</h3>
+        <img src="http://media.tylernwolf.com.s3.amazonaws.com/portfolio/datastudio.png">
+        <p class="img-description">Sketch Data Studio website</p>
+    </div>
+
 </div>
