--- a/app/portfolio/works/equalizer.html
+++ b/app/portfolio/works/equalizer.html
@@ -5,11 +5,26 @@
 </div>
 <div class="row equalizer">
     <div class="col-xs-9">
+        <h3>Implementation</h3>
+        <dl class="implementation dl-horizontal">
+            <dt>Front end</dt>
+            <dd>Javascript (D3.js)</dd>
+            <dt>Back end</dt>
+            <dd>Scala</dd>
+            <dt>Design</dt>
+            <dd>Sketch</dd>
+        </dl>
+
         <h3>Requirements</h3>
+
         <p>An interface for setting various input factors for a simulation. There are 10 variables that can be adjusted on a sliding scale.</p>
+
         <p>The variables have historical values associated with them. Various statistics about the historical values are indicated along with the current setting of the variable and whether or not it is above or below the historical mean.</p>
+
         <p>Any variable can be set to human or simulation control, which should be clearly indicated. After the variables are set and submitted, a bar chart updates to show the results of the simulation.</p>
+
     </div>
+
     <div class="col-xs-9 section-image">
         <h3>Wireframe</h3>
         <img src="http://media.tylernwolf.com.s3.amazonaws.com/portfolio/equalizer_mockup.png">
