--- a/app/portfolio/works/heatmap.html
+++ b/app/portfolio/works/heatmap.html
@@ -5,10 +5,25 @@
 </div>
 <div class="row heatmap">
     <div class="col-xs-9">
+        <h3>Implementation</h3>
+
+        <dl class="implementation dl-horizontal">
+            <dt>Front end</dt>
+            <dd>Javascript (D3.js)</dd>
+            <dt>Back end</dt>
+            <dd>Scala</dd>
+            <dt>Design</dt>
+            <dd>Sketch</dd>
+        </dl>
+
         <h3>Requirements</h3>
+
         <p>A UI for visualizing a financial portfolio. Rectangles are sized to represent a stock's proportion of the portfolio. The color of the rectangles represented the stock's positive or negative contribution to the portfolio.</p>
+
         <p>Portfolios could be grouped into larger sections, which should be represented similarly to stocks. When a section is clicked, the interface should zoom into the clicked section to give greater detail.</p>
+
         <p>Hovering over a particular stock should give a pop-up with more detailed information about the stock.</p>
+        
         <p>With this interface, a user should easily be able to navigate and discover the significant contributors and detractors from their portfolio.</p>
     </div>
     <div class="col-xs-9 section-image">
