--- a/app/portfolio/works/novus.html
+++ b/app/portfolio/works/novus.html
@@ -5,9 +5,23 @@
 </div>
 <div class="row novus">
     <div class="col-xs-9">
+        <h3>Implementation</h3>
+
+        <dl class="implementation dl-horizontal">
+            <dt>Front end</dt>
+            <dd>Javascript (Angular), Bootstrap + CSS</dd>
+            <dt>Back end</dt>
+            <dd>Scala</dd>
+            <dt>Design</dt>
+            <dd>Sketch</dd>
+        </dl>
+
         <h3>Description</h3>
+
         <p>Novus is a financial analytics platform for Institutional investors (hedge funds, fund-of-funds, etc.) The platform provides analytics and risk metrics across a user's entire investment portfolio down to the position level.</p>
+
         <p>I worked on Novus first as a front end/UI developer, then as a UX/UI designer. Working with such complex data sets as investment portfolios (trees of many different types of data) presents many difficult design challenges. Keeping the user aware of the current context and how they can control it is critical. It's also important for users to be able to consume the data easily. This led to many opportunities for data visualization.</p>
+
     </div>
     <div class="col-xs-9 section-image">
         <h3>Screenshots</h3>
