updated tylernwolf screenshot

--- a/app/portfolio/works/tylernwolf.html
+++ b/app/portfolio/works/tylernwolf.html
@@ -24,9 +24,7 @@
     <div class="col-xs-9 section-image">
         <h3>Screenshots</h3>
         <img src="http://media.tylernwolf.com.s3.amazonaws.com/portfolio/tylernwolf_1.png">
-        <p class="img-description">My original website</p>
-        <img src="http://media.tylernwolf.com.s3.amazonaws.com/portfolio/tylernwolf_2.png">
-        <p class="img-description">The next implementation used before the current one</p>
+        <p class="img-description">A previous implementation of the website</p>
     </div>
 
 </div>
