--- a/app/portfolio/works/corrdisp.html
+++ b/app/portfolio/works/corrdisp.html
@@ -8,11 +8,12 @@
   }
 
   svg {
+    position:relative;
     margin-top:25px;
+    margin-bottom:50px;
     width:1000px;
     height:540px;
     background-color:#fff;
-    margin-bottom:50px;
   }
 
   svg text {
