update to content

--- a/app/about/about.html
+++ b/app/about/about.html
@@ -3,18 +3,20 @@
     <br/>
     <div class="content-section row">
         <div class="col-sm-6 col-xs-12">
-            <p>I'm a <strong>Software Developer</strong> and <strong>UX Designer</strong> based in New York City. I draw, wireframe, research, design and code. I also spend some time on 3D design and WebGL programming.</p>
+            <p>I'm a <strong>Product Designer</strong> based in New York City. I draw, wireframe, research, design and code. I also spend some time on 3D design and WebGL programming. Oh yeah, I also used to be a <strong>Software Developer</strong>.</p>
             <h3>Design</h3>
             <ul>
                 <li>Web Application Design</li>
                 <li>Data Visualization</li>
                 <li>Virtual Reality Design</li>
+                <li>Blockchain and crypto-based application design</li>
                 <li>Adobe Creative Suite</li>
                 <li>Sketch</li>
                 <li>Wireframing</li>
                 <li>Interactive Prototyping</li>
                 <li>User Research</li>
                 <li>UX Strategy</li>
+                <li>Product Strategy</li>
             </ul>
             <h3>Code</h3>
             <ul>
