quick update to about

--- a/app/about/about.html
+++ b/app/about/about.html
@@ -3,7 +3,7 @@
     <br/>
     <div class="content-section row">
         <div class="col-sm-6 col-xs-12">
-            <p>I'm a <strong>Product Designer</strong> based in New York City. I draw, wireframe, research, design and code. I also spend some time on 3D design and WebGL programming. Oh yeah, I also used to be a <strong>Software Developer</strong>.</p>
+            <p>I'm a <strong>Product Designer</strong> based in New York City. I draw, wireframe, research, design and (sometimes) code. I also spend some time on Virtual Reality design. Oh yeah, I also used to be a <strong>Software Developer</strong>.</p>
             <h3>Design</h3>
             <ul>
                 <li>Web Application Design</li>
