--- a/app/portfolio/works/corrdisp.html
+++ b/app/portfolio/works/corrdisp.html
@@ -55,7 +55,9 @@
       <p>The top three charts on the left display Alpha over time for a Fund, Hedge Fund Index A (IDX A) and Hedge Fund Index B (IDX B), respectively. At the bottom is the correlation and dispersion plotted over the same time period. On the right, a scatter plot shows the average Alpha for the three candidates in given market conditions (high/low correlation in combination with high/low dispersion). In the bottom right are the details of the currently focused&nbsp;data point.
       <br>
       <br>
-      To focus on a data point, either in the bar charts or the scatter plot, mouse over the data point - the other charts will highlight the corresponding point and the detail section will update with the corresponding&nbsp;numbers. <a href="https://github.com/thetylerwolf/financialviz">See it on github</a></p>
+      To focus on a data point, either in the bar charts or the scatter plot, mouse over the data point - the other charts will highlight the corresponding point and the detail section will update with the corresponding&nbsp;numbers. Note: Numbers were modified for anonymity, but the trends remain the same.
+      <br>
+      <a href="https://github.com/thetylerwolf/financialviz">See it on github</a></p>
     </section>
   </div>
   <div class="col-xs-12">
