updated for seo

--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
 <head>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <title>UX Designer in NYC | Tyler Wolf</title>
-  <meta name="description" content="User Experience Designer and Web Developer in NYC. I do Web Application design and development, Data Visualization and UX Research. See my Portfolio.">
+  <title>Product Designer in NYC | Tyler Wolf</title>
+  <meta name="description" content="Product Designer and Web Developer in NYC. I do Web Application design and development, Data Visualization and UX Design and Research. See my Portfolio.">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  
+
   <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,700' rel='stylesheet' type='text/css'>
   <link href='http://fonts.googleapis.com/css?family=Roboto' rel='stylesheet' type='text/css'>
 
@@ -62,7 +62,7 @@
 
         <div ng-view></div>
     </div>
-    
+
     <!-- <footer>Copyright 2015 Tyler Wolf</footer> -->
 
       <!-- In production use:
